--- a/config/.env.example
+++ b/config/.env.example
@@ -1,4 +1,4 @@
-BOT_TOKEN=your_bot_token_here
-BOT_USERNAME=your_bot_username
+BOT_TOKEN=8491564804:AAF1qlYSYI9WEmHAUQlOSnOyMMR0WoRlffo
+BOT_USERNAME=Наши желания
 BOT_MODE=longpolling
 WEBHOOK_URL=https://yourdomain.com/webhook.php
